snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3-all.jar.sha256
7158df6fb5959e9c68a04f0036fb846d868cededff94b4fb776426284aeb6d5a